fixed disabled breakpoint in dark mode

--- a/packages/eez-studio-ui/_stylesheets/project-editor.less
+++ b/packages/eez-studio-ui/_stylesheets/project-editor.less
@@ -957,6 +957,7 @@
             top: -24px;
             padding: 0 8px;
             border-radius: 2px;
+            color: @textColor;
         }
 
         &.enabled-breakpoint::before {
